--- a/web-principal & Admin/style.css
+++ b/web-principal & Admin/style.css
@@ -1,5 +1,8 @@
 
-
+body{
+  background:#f5f5f5;
+  margin-top:20px;}
+  
 /* CSS */
 .button-36 {
   background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
