--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -1,132 +1,77 @@
-@import url('https://rsms.me/inter/inter-ui.css');
-::selection {
-  background: #2D2F36;
-}
-::-webkit-selection {
-  background: #2D2F36;
-}
-::-moz-selection {
-  background: #2D2F36;
-}
+@import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap");
 body {
-  background: white;
-  font-family: 'Inter UI', sans-serif;
   margin: 0;
-  padding: 20px;
-}
-.page {
-  background: #e2e2e5;
+  padding: 0;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  height: calc(100% - 40px);
-  position: absolute;
-  place-content: center;
-  width: calc(100% - 40px);
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(45deg, rgb(233, 246, 247), dodgerblue);
+  font-family: "Sansita Swashed", cursive;
 }
-@media (max-width: 767px) {
-  .page {
-    height: auto;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-  }
-}
-.container {
-  display: flex;
-  height: 320px;
-  margin: 0 auto;
-  width: 640px;
-}
-@media (max-width: 767px) {
-  .container {
-    flex-direction: column;
-    height: 630px;
-    width: 320px;
-  }
-}
-.left {
-  background: white;
-  height: calc(100% - 40px);
-  top: 20px;
+.center {
   position: relative;
-  width: 50%;
+  padding: 50px 50px;
+  background: #fff;
+  border-radius: 10px;
 }
-@media (max-width: 767px) {
-  .left {
-    height: 100%;
-    left: 20px;
-    width: calc(100% - 40px);
-    max-height: 270px;
-  }
+.center h1 {
+  font-size: 2em;
+  border-right: 5px solid rgb(2, 53, 105);
+  padding: 10px;
+  color: #000;
+  letter-spacing: 5px;
+  margin-bottom: 60px;
+  font-weight: bold;
+  padding-left: 10px;
+  text-align: right;
 }
-.login {
-  font-size: 50px;
-  font-weight: 900;
-  margin: 50px 40px 40px;
-}
-.eula {
-  color: #999;
-  font-size: 14px;
-  line-height: 1.5;
-  margin: 40px;
-}
-.right {
-  background: #474A59;
-  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
-  color: #F1F1F2;
+.center .inputbox {
   position: relative;
-  width: 50%;
+  width: 300px;
+  height: 50px;
+  margin-bottom: 50px;
+  
 }
-@media (max-width: 767px) {
-  .right {
-    flex-shrink: 0;
-    height: 100%;
-    width: 100%;
-    max-height: 350px;
-  }
-}
-svg {
+.center .inputbox input {
   position: absolute;
-  width: 320px;
-}
-path {
-  fill: none;
-  stroke: url(#linearGradient);;
-  stroke-width: 4;
-  stroke-dasharray: 240 1386;
-}
-.form {
-  margin: 40px;
-  position: absolute;
-}
-label {
-  color:  #c2c2c5;
-  display: block;
-  font-size: 14px;
-  height: 16px;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-input {
-  background: transparent;
-  border: 0;
-  color: #f2f2f2;
-  font-size: 20px;
-  height: 30px;
-  line-height: 30px;
-  outline: none !important;
+  top: 0;
+  left: 0;
   width: 100%;
+  border: 2px solid #000;
+  outline: none;
+  background: none;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 1.2em;
+  text-align: right;
 }
-input::-moz-focus-inner { 
-  border: 0; 
+.center .inputbox:last-child {
+  margin-bottom: 0;
 }
-#submit {
-  color: #707075;
-  margin-top: 40px;
-  transition: color 300ms;
+.center .inputbox span {
+  position: absolute;
+  top: 14px;
+  right: 20px;
+  font-size: 1em;
+  transition: 0.6s;
+  font-family: sans-serif;
+  
 }
-#submit:focus {
-  color: #f2f2f2;
+.center .inputbox input:focus ~ span,
+.center .inputbox input:valid ~ span {
+  transform: translateX(-13px) translateY(-35px);
+  font-size: 1em;
+  
 }
-#submit:active {
-  color: #d0d0d2;
+.center .inputbox [type="button"] {
+  width: 50%;
+  background: dodgerblue;
+  color: #fff;
+  border: #fff;
+  text-align: center;
+}
+.center .inputbox:hover [type="button"] {
+  background: linear-gradient(45deg, rgb(198, 218, 253), dodgerblue);
 }
