--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -1,28 +1,45 @@
 @import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap");
 body {
   margin: 0;
+
+  margin-top: 30px;
+  margin-bottom: 30px;
   padding: 0;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+ 
   background: linear-gradient(45deg, rgb(233, 246, 247), #ccc);
   font-family: "Sansita Swashed", cursive;
+}
+
+
+.center h3 {
+  font-size: 1em;
+  border-right: 5px solid rgb(2, 53, 105);
+  padding: 5px;
+  color: #000;
+  letter-spacing: 3px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  padding-left: 10px;
+  text-align: right;
 }
 .center {
   position: relative;
   padding: 50px 50px;
   background: #fff;
   border-radius: 10px;
+
 }
 .center h1 {
   font-size: 2em;
-  border-right: 5px solid rgb(2, 53, 105);
+  border-right: 20px solid #6ce5e8;
   padding: 10px;
   color: #000;
   letter-spacing: 5px;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   font-weight: bold;
   padding-left: 10px;
   text-align: right;
@@ -31,7 +48,8 @@ body {
   position: relative;
   width: 300px;
   height: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  margin-top: 20px;
   
 }
 .center .inputbox input {
@@ -95,3 +113,4 @@ body {
   margin-bottom:10px;
   opacity: 0.8;
 }
+
