--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -31,6 +31,7 @@ body {
   padding: 50px 50px;
   background: #fff;
   border-radius: 10px;
+  width: 500px;
 
 }
 .center h1 {
@@ -46,11 +47,11 @@ body {
 }
 .center .inputbox {
   position: relative;
-  width: 300px;
+  width: 400px;
   height: 50px;
   margin-bottom: 40px;
   margin-top: 20px;
-  
+  margin-left: 3em;
 }
 .center .inputbox input {
   position: absolute;
@@ -64,6 +65,7 @@ body {
   border-radius: 10px;
   font-size: 1.2em;
   text-align: right;
+  
 }
 .center .inputbox:last-child {
   margin-bottom: 0;
