--- a/web-principal & Admin/navbar.css
+++ b/web-principal & Admin/navbar.css
@@ -7,7 +7,7 @@ body{
 	margin: 0;
 	padding: 0;
 }
-i {
+.fa-bars {
 	margin-right: 10px;
 }
 /*----------bootstrap-navbar-css------------*/
@@ -17,8 +17,9 @@ i {
     background-color: #fff;
 }
 .navbar-mainbg{
-	background-color: #5161ce;
+	background-color: white;
 	padding: 0px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #navbarSupportedContent{
 	overflow: hidden;
@@ -33,10 +34,10 @@ i {
 }
 #navbarSupportedContent li {
 	list-style-type: none;
-	float: left;
+	float: right;
 }
 #navbarSupportedContent ul li a{
-	color: rgba(255,255,255,0.5);
+	color: #5161ce;
     text-decoration: none;
     font-size: 15px;
     display: block;
@@ -46,7 +47,7 @@ i {
     position: relative;
 }
 #navbarSupportedContent>ul>li.active>a{
-	color: #5161ce;
+	color: white;
 	background-color: transparent;
 	transition: all 0.7s;
 }
@@ -74,7 +75,7 @@ i {
 	left: 0px;
 	transition-duration:0.6s;
 	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	background-color: #fff;
+	background-color:#5161ce;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	margin-top: 10px;
@@ -84,7 +85,7 @@ i {
 	position: absolute;
 	width: 25px;
 	height: 25px;
-	background-color: #fff;
+	background-color:#5161ce;
 	bottom: 10px;
 }
 .hori-selector .right{
@@ -100,7 +101,7 @@ i {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #5161ce;
+    background-color:white;
 }
 .hori-selector .right:before{
 	bottom: 0;
@@ -166,3 +167,53 @@ i {
 		left: -25px;
 	}
 }
+
+
+/*breadcrumb*/
+.cont_breadcrumbs {
+	width: 350px;
+	float: right;
+	height: 50px;
+  }
+
+  
+.cont_breadcrumbs_3 {
+	position: relative;
+	width: 100%;
+	float: right;
+	margin: 20px 20px;
+	height: 30px;
+  }
+  
+  .cont_breadcrumbs_3 > ul > li {
+	position: relative;
+	float: right;
+	transform: skewX(-15deg);  
+	background-color: #fff;
+  z-index: 1;
+  transition: all 0.5s;
+  margin-right: 5px;
+  }
+  
+  .cont_breadcrumbs_3 > ul > li:hover {
+   background-color: #CFD8DC;
+  }
+  
+  .cont_breadcrumbs_3 > ul > li  > a {
+	display: block;
+	padding: 10px;
+	font-size: 20px;
+   transform: skewX(15deg);
+   text-decoration:none;
+   color: #444;
+  font-weight: 300;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  }
+  .cont_breadcrumbs_3 > ul > li:first-child {
+	background-color: #78909C;
+  }
+  
+  .cont_breadcrumbs_3 > ul > li:first-child > a {
+	color: #fff; 
+  
+  }
