--- a/web-principal & Admin/students.css
+++ b/web-principal & Admin/students.css
@@ -1,9 +1,4 @@
-body{
-    background:#eee;    
-}
-.main-box.no-header {
-    padding-top: 20px;
-}
+
 th span{
     font-size: 17px; 
     margin-right: 7em;
@@ -40,16 +35,11 @@ th span{
     padding-top: 3px;
     margin-left: 60px;
 }
-a {
+.tdContent {
     color: #3498db;
     outline: none!important;
 }
-.user-list tbody td>img {
-    position: relative;
-    max-width: 100px;
-    float: left;
-    margin-right: 15px;
-}
+
 
 .table thead tr th {
     text-transform: uppercase;
@@ -68,7 +58,7 @@ a {
     border-top: 1px solid #e7ebee;
     padding: 12px 8px;
 }
-a:hover{
+.tdContent:hover{
 text-decoration:none;
 }
 
@@ -101,7 +91,7 @@ text-decoration:none;
     -webkit-user-select: none;
     touch-action: manipulation;
     box-align: right;
-    margin-left: 26em;
+    margin-left: 21em;
   }
   
   .button-36:hover {
