--- a/web-principal & Admin/register.css
+++ b/web-principal & Admin/register.css
@@ -45,6 +45,14 @@ body {
   padding-left: 50px;
   
 }
+.inputbox select {
+  position: relative;
+  width: 150px;
+  height: 50px;
+  margin-bottom: 50px;
+  padding-left: 10px;
+  text-align: right;
+}
 .center .inputbox input {
   position: absolute;
   top: 0;
