--- a/web-principal & Admin/navbar.css
+++ b/web-principal & Admin/navbar.css
@@ -37,7 +37,7 @@ body{
 	float: right;
 }
 #navbarSupportedContent ul li a{
-	color: #5161ce;
+	color: #3b9bbb;
     text-decoration: none;
     font-size: 15px;
     display: block;
@@ -75,7 +75,7 @@ body{
 	left: 0px;
 	transition-duration:0.6s;
 	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	background-color:#5161ce;
+	background-color: #3b9bbb ;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	margin-top: 10px;
@@ -85,7 +85,7 @@ body{
 	position: absolute;
 	width: 25px;
 	height: 25px;
-	background-color:#5161ce;
+	background-color:#3b9bbb;
 	bottom: 10px;
 }
 .hori-selector .right{
