--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -8,42 +8,12 @@ body {
   display:grid;
   justify-content:center;
   align-items: center;
-  background: linear-gradient(45deg, rgb(233, 246, 247), #ccc);
+  background: #fff;
   /*font-family: "Sansita Swashed", cursive;  */
 }
 
-.req{
-  color:red;
-  font-size: 1em;
-}
-
-.closebtn {
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.alertWrong {
-  padding: 20px;
-  background-color: #f44336; 
-  color: white;
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-.alertRight {
-  padding: 20px;
-  background-color: #03c052; 
-  color: white;
-  margin-bottom: 15px;
-  text-align: center;
-}
-
 .center h3 {
+  margin-right: 50px;
   font-size: 1em;
   border-right: 5px solid rgb(2, 53, 105);
   padding: 5px;
@@ -63,6 +33,8 @@ body {
   border-radius: 10px;
   margin-right: 50px;
   margin-left: 50px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 100%;
 }
 
 .card{
@@ -86,7 +58,7 @@ body {
   height: 50px;
   margin-bottom: 40px;
   margin-top: 20px;
- 
+  margin-left: 50px;
 }
 .center .inputbox input {
   position: absolute;
@@ -100,7 +72,7 @@ body {
   border-radius: 10px;
   font-size: 1.2em;
   text-align: right;
-  
+  margin-left: 30px;
 }
 .center .inputbox:last-child {
   margin-bottom: 0;
@@ -153,7 +125,8 @@ body {
 }
 
 .button-36 {
-  background-image: linear-gradient(92.88deg, #5166b3 9.16%, #4371cc 43.89%, #3f62d7 64.72%);
+  margin-left: 30px;
+  background-image: linear-gradient(92.88deg, #3790ad 9.16%, #3790ad 43.89%, #3790ad 64.72%);
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
@@ -185,4 +158,75 @@ body {
   .button-36 {
     padding: 0 2.6rem;
   }
+}
+.screen__background__shape {
+	transform: rotate(45deg);
+	position: absolute;
+}
+.screen__background__shape1 {
+	height: 520px;
+	width: 520px;
+  background: linear-gradient(45deg, #4ebfc1 0%, #75a79b 100%);		
+	top: -20px;
+	left: 100px;	
+  z-index: -1;
+	border-radius: 72px 72px 72px 72px;
+}
+
+.screen__background__shape2 {
+	height: 220px;
+  z-index: -1;
+	width: 220px;
+	background: cadetblue;	
+	top: -150px;
+	left: 0;	
+	border-radius: 32px;
+}
+
+.screen__background__shape3 {
+	height: 540px;
+	width: 190px;
+  z-index: -1;
+	top: 20px;
+  background: linear-gradient(45deg,#b9bebd  25%, #4bcacf 100%);		
+	left: 80%;	
+	border-radius: 32px;
+}
+
+.screen__background__shape4 {
+	height: 400px;
+	width: 200px;
+  background: linear-gradient(45deg,#b9bebd  25%, #4bcacf 100%);		
+	top: 500px;
+	left: 50px;	
+  z-index: -1;
+	border-radius: 60px;
+}
+.screen__background__shape5 {
+	height: 540px;
+	width: 190px;
+	top: 25%;
+  z-index: -1;
+  background: linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
+	left: 0;	
+	border-radius: 32px;
+}
+.screen__background__shape6 {
+	height: 520px;
+	width: 580px;
+  background: linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
+	top: 45em;
+	left: 80%;	
+  z-index: -1;
+	border-radius: 72px 72px 72px 72px;
+}
+
+.screen__background__shape7 {
+	height: 440px;
+	width: 200px;
+  z-index: -1;
+	top: 90px;
+  background:linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
+	left: 70%;	
+	border-radius: 32px;
 }
