code after structure change

--- a/web-principal & Admin/principalStyle.css
+++ b/web-principal & Admin/principalStyle.css
@@ -185,7 +185,7 @@ margin-top: 5rem;
 
 /* CSS */
 .button-36 {
-  background-image: linear-gradient(92.88deg, #5166b3 9.16%, #4371cc 43.89%, #3f62d7 64.72%);
+  background-image: linear-gradient(92.88deg, #5aa4aa 9.16%, #5aa4aa 43.89%, #5aa4aa 64.72%);
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
