--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -8,7 +8,7 @@ body {
   display:grid;
   justify-content:center;
   align-items: center;
-  background: linear-gradient(45deg, rgb(233, 246, 247), #ccc);
+  background: linear-gradient(45deg, rgb(174, 210, 215),rgb(205, 225, 227), #ccc);
   /*font-family: "Sansita Swashed", cursive;  */
 }
 
