--- a/web-principal & Admin/register.css
+++ b/web-principal & Admin/register.css
@@ -6,9 +6,22 @@ body {
   justify-content: center;
   align-items: center;
   
-  background: linear-gradient(45deg, rgb(233, 246, 247), #ccc);
+  background: linear-gradient(-45deg, rgb(71, 129, 137),rgb(205, 225, 227), #ccc);
+  animation: gradient 10s ease infinite;
   font-family: "Sansita Swashed", cursive;
 }
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .center {
   position: relative;
   padding: 50px 50px;
