--- a/web-principal & Admin/register.css
+++ b/web-principal & Admin/register.css
@@ -29,6 +29,7 @@ body {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   width: 50%;
+ margin-top: 3%;
 }
 .center h1 {
   font-size: 2em;
@@ -57,7 +58,7 @@ body {
   width: 300px;
   height: 50px;
   margin-bottom: 50px;
-  padding-left: 50px;
+  padding-left: 10%;
   margin-left: 40%;
 
   
@@ -192,4 +193,27 @@ z-index: -2;
 z-index: -2;
 	left: 0;	
 	border-radius: 32px;
+}
+
+@media(max-width: 992px){
+	.screen__background__shape1 {
+
+    z-index: -2 ;
+  }
+	.center .inputbox {
+    position: relative;
+    width: 300px;
+    height: 50px;
+    margin-bottom: 50px;
+    padding-left: 3%;
+    margin-left: 4%;
+  
+    
+  }
+  .screen__background__shape4 {
+   z-index: -1;
+  }
+  .center{
+    margin-left: 0%;
+  }
 }
