--- a/web-principal & Admin/navbar.css
+++ b/web-principal & Admin/navbar.css
@@ -2,6 +2,7 @@
 
 body{
 	font-family: 'Roboto', sans-serif;
+
 }
 * {
 	margin: 0;
@@ -268,5 +269,16 @@ svg{
   }
   
   .dropdownw3c:hover .dropbtn {
-	background-color:  #215465;
+	background-color:  #2c768f;
+  }
+
+  /*footeer*/
+  footer{
+	background-color: #3b9bbb;
+	text-align: center;
+	color: #fff;
+	position: fixed;
+   bottom: 0;
+   width: 100%;
+   height: 60px;
   }
