--- a/web-principal & Admin/navbar.css
+++ b/web-principal & Admin/navbar.css
@@ -280,5 +280,8 @@ svg{
 	position: fixed;
    bottom: 0;
    width: 100%;
-   height: 60px;
+   height: 40px;
+  }
+  footer a{
+	color: #fff;
   }
