--- a/web-principal & Admin/navbar.css
+++ b/web-principal & Admin/navbar.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body{
-	font-family: 'Roboto', sans-serif;
-
+	font-family: -apple-system, -apple-system, 
+	BlinkMacSystemFont, 'Segoe UI', Roboto, 
+	Oxygen, Ubuntu, Cantarell, 'Open Sans', 
+	'Helvetica Neue', sans-serif;
 }
 * {
 	margin: 0;
