--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -165,7 +165,7 @@
 	width: 520px;
   background: linear-gradient(45deg, #4ebfc1 0%, #75a79b 100%);		
 	top: -20px;
-	left: 100px;	
+	left: 140px;	
   z-index: -1;
 	border-radius: 72px 72px 72px 72px;
 }
@@ -175,7 +175,7 @@
   z-index: -1;
 	width: 220px;
 	background: cadetblue;	
-	top: -150px;
+	top: -120px;
 	left: 0;	
 	border-radius: 32px;
 }
@@ -184,20 +184,20 @@
 	height: 540px;
 	width: 190px;
   z-index: -1;
-	top: 20px;
+	top: 40px;
   background: linear-gradient(45deg,#b9bebd  25%, #4bcacf 100%);		
-	left: 80%;	
+	left: 60%;	
 	border-radius: 32px;
 }
 
 .screen__background__shape4 {
-	height: 400px;
-	width: 200px;
+	height: 900px;
+	width: 250px;
   background: linear-gradient(45deg,#b9bebd  25%, #4bcacf 100%);		
-	top: 500px;
-	left: 50px;	
+	top: 700px;
+	left: 70px;	
   z-index: -1;
-	border-radius: 60px;
+	border-radius: 60px 72px;
 }
 .screen__background__shape5 {
 	height: 540px;
@@ -206,24 +206,25 @@
   z-index: -1;
   background: linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
 	left: 0;	
-	border-radius: 32px;
+	border-radius: 32px ;
 }
+
 .screen__background__shape6 {
 	height: 520px;
 	width: 580px;
   background: linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
 	top: 45em;
-	left: 80%;	
+	left: 53%;	
   z-index: -1;
 	border-radius: 72px 72px 72px 72px;
 }
 
 .screen__background__shape7 {
-	height: 440px;
+	height: 480px;
 	width: 200px;
   z-index: -1;
 	top: 90px;
   background:linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
-	left: 70%;	
+	left: 75%;	
 	border-radius: 32px;
 }
