--- a/web-principal & Admin/students.css
+++ b/web-principal & Admin/students.css
@@ -272,11 +272,11 @@ z-index: -2;
   background-color: red;
   color: white;
 }
-#saveAttendence{
+#saveAttendence, #addDoc{
  
   background-image: linear-gradient(92.88deg, #3790ad 9.16%, #3790ad 43.89%, #3790ad 64.72%);
 }
-#saveAttendence:hover{
+#saveAttendence:hover, #addDoc:hover{
   background-image: linear-gradient(92.88deg, white 9.16%, white 43.89%, white 64.72%);
   color: #3790ad;
   border-color: #3498db;
@@ -287,3 +287,8 @@ z-index: -2;
   margin-top: 100px;
   text-align: center;
 }
+
+.topTitle {
+  text-align: center;
+  margin-top: 3%;
+  }
