--- a/web-principal & Admin/pickup.css
+++ b/web-principal & Admin/pickup.css
@@ -1,14 +1,94 @@
+@import url('https://fonts.googleapis.com/css?family=Abel');
+
 body {
-    font-family: "lato", sans-serif;
+  background: #F0EDED;
+}
+
+#wrapper {
+  width: 100%;
+    
+  @media screen and (min-width: 1024px) {
+    width: 1100px;
+    margin: 0 auto;
   }
-  .container {
-    max-width: 70%;
-    margin-left: 30%;
-    margin-right: 30%;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: center;
+}
+  #wrapper #pricing-tables {
+    font-family: "Abel", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+    @media screen and (min-width: 1024px) {
+      flex-direction: row;
+    }
   }
+  #pricing-tables  .pricing-table {
+      max-width: 530px;
+      width: 100%;
+      margin: 15px 0;
+      
+      @media screen and (min-width: 1024px) {
+        margin: 0;
+      }
+    } 
+      
+        
+        #pricing-tables  .pricing-table .header .title {
+          text-align: center;
+          text-transform: uppercase;
+          padding: 15px 0;
+          background: #e4e4e4;
+          color: #000;
+          font-size: 16x;
+        }
+        
+        #pricing-tables  .pricing-table .header .price {
+          text-align: center;
+          text-transform: uppercase;
+          padding: 15px 0;
+          background: #f6f6f6;
+          color: #000;
+          font-size: 28px;
+          font-weight: 300;
+            
+           
+        }
+        span {
+          font-size: 14px;
+          vertical-align: super;
+        }
+      
+      
+      .features {
+        background: #fff;
+      }
+      .features ul {
+          list-style: none;
+          margin: 0;
+          padding: 15px 0;}
+
+          .features li {
+            padding: 8px 5px;
+            text-align: center;
+          }
+          .features li  span {
+              color: #999;
+            }
+          
+        
+      
+      
+       
+      
+    
+    
+  
+
+
+
+
+ 
   
   h2 {
     font-size: 26px;
@@ -19,13 +99,13 @@ body {
   }
   
   
-    .responsive-table li {
+  .responsive-table li {
       border-radius: 3px;
       padding: 25px 30px;
-      display: flex;
+      
       margin-bottom: 25px;
-      align-content: right;
-    }
+      font-size: 20px;
+      text-align: center;    }
     
     .responsive-table .table-row {
       background-color: #ffffff;
