--- a/web-principal & Admin/students.css
+++ b/web-principal & Admin/students.css
@@ -277,11 +277,11 @@ z-index: -2;
   background-color: red;
   color: white;
 }
-#saveAttendence, #addDoc{
+#saveAttendence, #addDoc, #addEvent{
  
   background-image: linear-gradient(92.88deg, #3790ad 9.16%, #3790ad 43.89%, #3790ad 64.72%);
 }
-#saveAttendence:hover, #addDoc:hover{
+#saveAttendence:hover, #addDoc:hover, #addEvent:hover{
   background-image: linear-gradient(92.88deg, white 9.16%, white 43.89%, white 64.72%);
   color: #3790ad;
   border-color: #3498db;
