--- a/web-principal & Admin/create.css
+++ b/web-principal & Admin/create.css
@@ -269,3 +269,8 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+@media (max-width:997px) {
+  .screen__background__shape7 {
+    display: none;
+  }
+}
