--- a/web-principal & Admin/style.css
+++ b/web-principal & Admin/style.css
@@ -20,6 +20,18 @@ body{
     padding: 0 2.6rem;
   }
 }
+@media (max-width:987px) {
+  .screen__background__shape1 {
+    display: none;
+  }
+ 
+}
+@media (max-width:868px) {
+  .screen__background__shape3{
+    height: 281px;
+    left: 36%;
+  }
+}
 
 /*alert */
 
@@ -29,7 +41,7 @@ body{
 
 .alert .inner {
   display: block;
-  text-align: right;
+  text-align: center;
   padding: 6px;
   margin: 6px;
   border-radius: 3px;
